--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -21,7 +21,7 @@
     </div>
 
     <article>
-      <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}"/>
+      <img src="{{ post.image.url }}" alt="{{ post.title }}"/>
       <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
 
       <div>
