--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -36,7 +36,8 @@
 
   <div>
     <form>
-      
+      {{ comment_form }}
+      <button>Save Comment</button>
     </form>
   </div>
 {% endblock %}
