--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -10,13 +10,20 @@
 {% endblock %}
 
 {% block content %}
+  {% if comment_form.errors %}
+  <div id="alert">
+    <h2>Saving the comment failed</h2>
+    <p>Please check the comment form below the post and fix your errors</p>
+    <a href="#comment-form">Fix!</a>
+  </div>
+  {% endif %}
+
   <section id="summary">
     <h2>{{ post.title }}</h2>
     <div>
       {% for tag in post_tags %}
         <span class="tag">{{ tag.caption }}</span>
       {% endfor %}
-
 
     </div>
 
@@ -39,7 +46,7 @@
     <form action="{% url "post-detail-page" post.slug %}" method="POST">
       {% csrf_token %}
       {% for form_field in comment_form %}
-        <div class="form-control">
+        <div class="form-contro {% if form_field.errors %}invalid{% endif %}">
           {{ form_field.label_tag }}
           {{ form_field }}
           {{ form_field.errors }}
@@ -50,3 +57,5 @@
     </form>
   </section>
 {% endblock %}
+
+
