--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -57,6 +57,24 @@ body {
   font-weight: bold;
 } 
 
+#read-later {
+  margin: 2rem 0;
+}
+
+#read-later button {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 0.5rem 2rem;
+  font: inherit;
+  color: white;
+}
+
+#read-later button.hover,
+#read-later button:active {
+  background-color: white;
+  color: #390281;
+}
+
 main {
   width: 90%;
   max-width: 90rem;
