--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -24,7 +24,14 @@
       {% for tag in post_tags %}
         <span class="tag">{{ tag.caption }}</span>
       {% endfor %}
+    </div>
 
+    <div id="read-later">
+      <form action="{% url "read-later" %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" value="{{ post.id }}" name="post_id">
+        <button>Read Later</button>
+      </form>
     </div>
 
     <article>
