--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <h1><a href="{% url "starting-page" %}">Blog</a></h1>
 
     <nav>
+      <a href="{% url "read-later" %}">Stored Posts</a>
       <a href="{% url "posts-page" %}">All Posts</a>
     </nav>
   </header>
