--- a/blog/templates/blog/stored-posts.html
+++ b/blog/templates/blog/stored-posts.html
@@ -1,17 +1,22 @@
 {% extend "base.html" %}
+{% load static %}
 
 {% block title %}
 My Stored posts
 {% endblock %}
 
+{% block css_files %}
+<link rel="stylesheet" href="{% static "blog/stored-posts.css" }">
+{% endblock %}
+
 {% block content %}
-    <section>
+    <section id="stored-posts">
         {% if not has_posts %}
             <p>You didn't save any post for later</p>
         {% endif %}
         <ul>
         {% for post in posts %}
-            <li><a href="{% url "post-detail-page" post.slug %}">{{ post.title }}</li>
+            <li><a href="{% url "post-detail-page" post.slug %}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
     </section>
